finished with HTML and CSS

--- a/style.css
+++ b/style.css
@@ -2,20 +2,96 @@ body {
     background-color: yellowgreen;
 }
 
-
-Header {
-    text-align: center;
-    font-family: 'Indie Flower', cursive;
-    font-size: 40px;
-    color: rgb(127, 255, 242);
-    
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
 h1 {
     text-align: center;
-    padding: 50px;
-    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: normal;
+    margin-bottom: 30px;
+    font-size: 50px;
     font-family: 'Indie Flower',cursive;
-    color: rgb(255, 255, 127)
+    color: rgb(255, 255, 127);
 }
 
+.container{
+    display: block;
+    width: 100%;
+   }
 
+.bg_wrapper {
+    display: block;
+    background-color: rgba(0, 195, 255, 0.579);
+    width: 100%;
+    height: 50vh;
+    padding-top: 60px;
+    position: relative;
+}
+.refresh {
+    position:absolute;
+    bottom: 10px;
+    right: 60px;
+    width: 150px;
+    height: 45px;
+    background-color: aliceblue;
+    text-transform: uppercase;
+    line-height: 45px;
+    text-align: center;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.character_card {
+    display: block;
+    width: 60%;
+    height: 60vh;
+    margin:auto;
+    border-radius: 5px;
+    margin-top: -35vh;
+    background-color: blanchedalmond;
+    padding-bottom: 50px;
+    position: relative;
+
+}
+.character_header {
+    background-color: rgba(191, 255, 0, 0.502);
+    border-bottom: 1px solid rgba(255, 255, 0, 0.392);
+    padding: 50px;
+}
+.character_img {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    border-radius: 100%;
+    margin-top: -80px;
+    position: relative;
+    background-color: #fff;
+    border: 1px solid rgb(87,187,253);
+}
+img{
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.title_info {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 26px;
+    font-family: 'Indie Flower',cursive;
+    color: rgb(127, 255, 200)
+    
+}
+.title_details{
+    margin-top: 20px;
+    text-align: center;
+    font-size: 45px;
+    font-family: 'Indie Flower',cursive;
+
+}
