--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ body {
     
 }
 
-
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
 h1 {
     text-align: center;
